builder-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: builder
  namespace: twisterlab
spec:
  containers:
  - name: builder
    image: docker:cli
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /var/run/docker.sock
      name: docker-sock
    - mountPath: /transfer
      name: transfer
  volumes:
  - name: docker-sock
    hostPath:
      path: /var/run/docker.sock
  - name: transfer
    hostPath:
      path: /tmp
