node-debugger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-debugger
  namespace: twisterlab
spec:
  containers:
  - name: debugger
    image: alpine
    command: ["sleep", "3600"]
    securityContext:
      privileged: true
    volumeMounts:
    - mountPath: /host
      name: host-root
  volumes:
  - name: host-root
    hostPath:
      path: /
