ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twisterlab-ui-react-ingress
  namespace: twisterlab
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: centre.twisterlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twisterlab-ui-react
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: twisterlab-api
            port:
              number: 8000
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: twisterlab-api
            port:
              number: 8000
